# TestTask

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ТЕХНИЧЕСКОЕ_ЗАДАНИЕ.md
src/: config.py  main.py
src/handlers/: command_handler.py  document_handler.py
src/services/: batch_manager.py  file_processor.py  lifecycle.py  reference_book.py
